# box-system

./: .gitignore  Cargo.toml  LICENSE  README.md  db_file.json
.forgejo/workflows/: formatter.yaml  renovate.yaml
src/: cli_mode.rs  database.rs  lib.rs  main.rs  qrcode_gen.rs  webui.rs
templates/: basic_camera.html  box.html  list_boxes.html  qr_camera.html
