[package]
name = "box-system"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
colored = "3.0.0"
hyper = "1.8.1"
image = "0.25.9"
printpdf = { version = "0.8.2", features = ["png"] }
qrcode = "0.14.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
simple_lib = "0.1.2"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs"] }
uuid = { version = "1.19.0", features = ["v4"] }
